--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ add_library(${PROJECT_NAME} SHARED
     src/hacks/creator/verifyhack.cpp
     src/hacks/creator/copy-hack.cpp
     src/hacks/misc/practice-music.cpp
+    src/hacks/misc/layout-mode-i-love-this-mod-
 )
 
 if (NOT DEFINED ENV{GEODE_SDK})
