--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ add_library(${PROJECT_NAME} SHARED
     src/main.cpp
     src/Button.cpp
     src/hacks/Player/Noclip.cpp
-    src/hacks/Player/jumphack.cpp
+   # src/hacks/Player/jumphack.cpp
     src/hacks/Player/ignore-inputs.cpp
     src/hacks/misc/speedhack.cpp
     src/hacks/misc/iconhack.cpp
