--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ add_library(${PROJECT_NAME} SHARED
     src/main.cpp
     src/Button.cpp
     src/hacks/Player/Noclip.cpp
-   # src/hacks/Player/jumphack.cpp
+    src/hacks/Player/jumphack.cpp
     src/hacks/Player/ignore-inputs.cpp
     src/hacks/misc/speedhack.cpp
     src/hacks/misc/iconhack.cpp
@@ -24,7 +24,7 @@ add_library(${PROJECT_NAME} SHARED
     src/hacks/creator/custom-obj-hack.cpp
     src/hacks/misc/practice-music.cpp
     src/hacks/misc/layout-mode.cpp
-    src/hacks/misc/speedhack.hpp
+    src/hacks/Player/Autoclicker.cpp
 )
 
 if (NOT DEFINED ENV{GEODE_SDK})
