--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ add_library(${PROJECT_NAME} SHARED
     src/hacks/misc/practice-music.cpp
     src/hacks/misc/layout-mode.cpp
     src/hacks/misc/colorhack.cpp
+    src/hacks/misc/show-hitboxes.cpp
      # src/hacks/misc/safe-mode.cpp
     
 )
