--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ add_library(${PROJECT_NAME} SHARED
     src/hacks/misc/colorhack.cpp
     src/hacks/misc/show-hitboxes.cpp
     src/hacks/misc/instantcomplete.cpp
+    src/hacks/misc/basementbypass.cpp
      # src/hacks/misc/safe-mode.cpp
     
 )
