--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,7 @@ add_library(${PROJECT_NAME} SHARED
     src/hacks/misc/show-hitboxes.cpp
     src/hacks/misc/instantcomplete.cpp
     src/hacks/misc/basementbypass.cpp
-    src/hacks/misc/safe-mode.cpp
+   # src/hacks/misc/safe-mode.cpp
     
 )
 
