--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,7 @@ add_library(${PROJECT_NAME} SHARED
     src/hacks/misc/show-hitboxes.cpp
     src/hacks/misc/instantcomplete.cpp
     src/hacks/misc/basementbypass.cpp
+    src/hacks/misc/level-edit-on-pause-menu.cpp
    # src/hacks/misc/safe-mode.cpp
     
 )
