--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,7 @@ add_library(${PROJECT_NAME} SHARED
     src/hacks/misc/level-edit-on-pause-menu.cpp
     src/hacks/creator/nocmark.cpp
     src/hacks/misc/main-levels.cpp
+    src/hacks/misc/rainbow-icons.cpp
    # src/hacks/misc/safe-mode.cpp
     
 )
