--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ add_library(${PROJECT_NAME} SHARED
     src/hacks/Player/ignore-inputs.cpp
     src/hacks/misc/speedhack.cpp
     src/hacks/misc/iconhack.cpp
+    src/hacks/misc/autopractice.cpp
     src/hacks/misc/suicide.cpp
     src/hacks/creator/verifyhack.cpp
     src/hacks/creator/copy-hack.cpp
