--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ add_library(${PROJECT_NAME} SHARED
     src/hacks/misc/practice-music.cpp
     src/hacks/misc/layout-mode.cpp
     src/hacks/misc/noglow.cpp
+    src/hacks/misc/hidepausebutton.cpp
     src/hacks/misc/colorhack.cpp
     src/hacks/misc/show-hitboxes.cpp
     src/hacks/misc/noplatjump.cpp
