--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,27 @@ set(CMAKE_CXX_VISIBILITY_PRESET hidden)
 
 project(polo VERSION 1.0.0)
 
+set(CPM_DOWNLOAD_VERSION 0.38.3)
+if(CPM_SOURCE_CACHE)
+    set(CPM_DOWNLOAD_LOCATION "${CPM_SOURCE_CACHE}/cpm/CPM_${CPM_DOWNLOAD_VERSION}.cmake")
+elseif(DEFINED ENV{CPM_SOURCE_CACHE})
+    set(CPM_DOWNLOAD_LOCATION "$ENV{CPM_SOURCE_CACHE}/cpm/CPM_${CPM_DOWNLOAD_VERSION}.cmake")
+else()
+    set(CPM_DOWNLOAD_LOCATION "${CMAKE_BINARY_DIR}/cmake/CPM_${CPM_DOWNLOAD_VERSION}.cmake")
+endif()
+
+if(NOT (EXISTS ${CPM_DOWNLOAD_LOCATION}))
+    message(STATUS "Downloading CPM.cmake to ${CPM_DOWNLOAD_LOCATION}")
+    file(DOWNLOAD
+        https://github.com/cpm-cmake/CPM.cmake/releases/download/v${CPM_DOWNLOAD_VERSION}/CPM.cmake
+        ${CPM_DOWNLOAD_LOCATION}
+    )
+endif()
+
+include(${CPM_DOWNLOAD_LOCATION})
+
+CPMAddPackage("gh:matcool/gd-imgui-cocos#653e533")
+
 add_library(${PROJECT_NAME} SHARED
     src/main.cpp
     src/hacks/misc/everytinghurtsandnosolids.cpp
@@ -41,6 +62,7 @@ add_library(${PROJECT_NAME} SHARED
     src/hacks/misc/nowavepulse.cpp
     
 )
+
 
 if (NOT DEFINED ENV{GEODE_SDK})
     message(FATAL_ERROR "Unable to find Geode SDK! Please define GEODE_SDK environment variable to point to Geode")
