--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,17 +18,17 @@ jobs:
         - name: mac 
           os: macos-latest
 
-        - name: ios
-          os: macos-latest
-          target: iOS
+       # - name: ios
+         # os: macos-latest
+         # target: iOS
 
-        - name: android32
-          os: ubuntu-latest
-          target: Android32
+      # - name: android32
+      # os: ubuntu-latest
+       # target: Android32
 
-        - name: android64
-          os: ubuntu-latest
-          target: Android64
+       # - name: android64
+         # os: ubuntu-latest
+         # target: Android64
 
     name: ${{ matrix.config.name }}
     runs-on: ${{ matrix.config.os }}
