--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,10 @@ jobs:
         - name: mac 
           os: macos-latest
           
+        - name: ios
+          os: macos-latest
+          target: iOS 
+
     name: ${{ matrix.config.name }}
     runs-on: ${{ matrix.config.os }}
 
