--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,7 +36,6 @@ file(GLOB SOURCES
     src/*.cpp
 	src/*/*.cpp
 	src/*/*/*.cpp
-    src/*/*/*/*.cpp
 )
 
 
@@ -47,6 +46,7 @@ else()
 endif()
 
 add_subdirectory($ENV{GEODE_SDK} ${CMAKE_CURRENT_BINARY_DIR}/geode)
+include_directories(include)
 
 setup_geode_mod(${PROJECT_NAME})
 
