--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,18 @@
 cmake_minimum_required(VERSION 3.21)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
 if ("${CMAKE_SYSTEM_NAME}" STREQUAL "iOS" OR IOS)
     set(CMAKE_OSX_ARCHITECTURES "arm64")
 else()
     set(CMAKE_OSX_ARCHITECTURES "arm64;x86_64")
 endif()
+
 set(CMAKE_CXX_VISIBILITY_PRESET hidden)
 
 project(polo VERSION 1.0.0)
 
+# CPM setup
 set(CPM_DOWNLOAD_VERSION 0.38.3)
 if(CPM_SOURCE_CACHE)
     set(CPM_DOWNLOAD_LOCATION "${CPM_SOURCE_CACHE}/cpm/CPM_${CPM_DOWNLOAD_VERSION}.cmake")
@@ -31,37 +34,36 @@ include(${CPM_DOWNLOAD_LOCATION})
 
 CPMAddPackage("gh:matcool/gd-imgui-cocos#653e533")
 
-add_library(${PROJECT_NAME} SHARED
-    src/main.cpp
-    src/hacks/misc/everytinghurtsandnosolids.cpp
-    src/hacks/misc/commenthistory.cpp
-    src/hacks/Player/Noclip.cpp
-    src/hacks/Player/jumphack.cpp
-    src/hacks/misc/safemode.cpp
-    src/hacks/Player/ignore-inputs.cpp
-    src/hacks/misc/speedhack.cpp
-    src/hacks/misc/iconhack.cpp
-    src/hacks/misc/autopractice.cpp
-    src/hacks/misc/suicide.cpp
-    src/hacks/creator/verifyhack.cpp
-    src/hacks/creator/copy-hack.cpp
-    src/hacks/creator/custom-obj-hack.cpp
-    src/hacks/misc/practice-music.cpp
-    src/hacks/misc/layout-mode.cpp
-    src/hacks/misc/noglow.cpp
-    src/hacks/misc/hidepausebutton.cpp
-    src/hacks/misc/colorhack.cpp
-    src/hacks/misc/show-hitboxes.cpp
-    src/hacks/misc/instantcomplete.cpp
-    src/hacks/misc/basementbypass.cpp
-    src/hacks/misc/level-edit-on-pause-menu.cpp
-    src/hacks/creator/nocmark.cpp
-    src/hacks/misc/main-levels.cpp
-    src/hacks/misc/rainbow-icons.cpp
-    src/hacks/misc/nowavepulse.cpp
-    
+file(GLOB_RECURSE ALL_SOURCES
+    "src/**/*.cpp"
+    "src/**/*.c"
+    "src/**/*.hpp"
+    "src/**/*.h"
+    "src/*.cpp"
+    "src/*.c"
+    "src/*.hpp"
+    "src/*.h"
 )
 
+file(GLOB_RECURSE INCLUDE_SOURCES
+    "include/**/*.cpp"
+    "include/**/*.c" 
+    "include/**/*.hpp"
+    "include/**/*.h"
+    "include/*.cpp"
+    "include/*.c"
+    "include/*.hpp"
+    "include/*.h"
+)
+
+list(APPEND ALL_SOURCES ${INCLUDE_SOURCES})
+
+message(STATUS "Found source files:")
+foreach(SOURCE_FILE ${ALL_SOURCES})
+    message(STATUS "  ${SOURCE_FILE}")
+endforeach()
+
+add_library(${PROJECT_NAME} SHARED ${ALL_SOURCES})
 
 if (NOT DEFINED ENV{GEODE_SDK})
     message(FATAL_ERROR "Unable to find Geode SDK! Please define GEODE_SDK environment variable to point to Geode")
@@ -71,6 +73,14 @@ endif()
 
 add_subdirectory($ENV{GEODE_SDK} ${CMAKE_CURRENT_BINARY_DIR}/geode)
 
+# Include directories
+target_include_directories(${PROJECT_NAME} PRIVATE 
+    ${CMAKE_CURRENT_SOURCE_DIR}/include
+    ${CMAKE_CURRENT_SOURCE_DIR}/src
+)
+
+# Link libraries
 target_link_libraries(${PROJECT_NAME} imgui-cocos)
 
+# Setup Geode mod
 setup_geode_mod(${PROJECT_NAME})
